--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="col-4 Col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                        <button mat-raised-button color="search" style="width:100%" (click)="getComplaint()">Choose Date</button>
+                        <button mat-raised-button color="search" style="width:100%" (click)="getDate()">Get Results</button>
                     </div>
                    
                     </div>
@@ -42,7 +42,7 @@
           <div class="container-fluid " style="padding-left:20px;padding-right:20px;">
             <div class="row">
                 <div class="col-8 col-md-6 col-xl-8 col-lg-8 col-sm-12">
-                  <h4><span style="padding-right:10px;vertical-align: middle;"><mat-icon style="color:#6146D5">toc</mat-icon></span>Table Overview for</h4> 
+                  <h4><span style="padding-right:10px;vertical-align: middle;"><mat-icon style="color:#6146D5">toc</mat-icon></span>Table Overview:</h4> 
                 </div>        
                  
                 <div class="col-4 col-md-6 col-xl-4 col-lg-4 col-sm-6">
@@ -56,10 +56,10 @@
                             <mat-label>Search</mat-label>
                   
                                
-                                <!-- <input matInput type="text" /> -->
+                             
                        
                             <input matInput type="text" [(ngModel)]="searchText" style="margin-top: -6px;" autocomplete="off" id="search">
-                            <button *ngIf="searchText" matSuffix mat-icon-button aria-label="Clear" (click)="searchText='';getComplaint();">
+                            <button *ngIf="searchText" matSuffix mat-icon-button aria-label="Clear" (click)="searchText='';getDate();">
                             </button>
                           </mat-form-field>
                         </div>
@@ -78,7 +78,7 @@
              
             </div>
               <div class="mat-elevation-z8">
-                  <table mat-table [dataSource]="complaintTableDataSource" matSort class="mat-elevation-z8" >
+                  <table mat-table [dataSource]="covidTableDataSource" matSort class="mat-elevation-z8" >
                     <ng-container matColumnDef="no">
                       <th class="thead" mat-header-cell *matHeaderCellDef mat-sort-header>No </th>
                       <td class="td" mat-cell *matCellDef="let element; let i = index;"> {{(paginator.pageIndex * paginator.pageSize) +i+1}}</td>
@@ -92,9 +92,9 @@
                       <ng-container matColumnDef="complaint_subject">
                           <th class="thead" mat-header-cell *matHeaderCellDef mat-sort-header>Vaccine </th>
                           <td mat-cell class="td" *matCellDef="let element">
-                              <div class="overme">
+                              
                                   {{element.sessions[0].vaccine}}
-                              </div>
+                             
                           </td>
                       </ng-container>
 
@@ -118,12 +118,12 @@
 
                
 
-                      <tr mat-header-row *matHeaderRowDef="complaintColumns"></tr>
-                      <tr class="tr" mat-row *matRowDef="let row; columns: complaintColumns;"></tr>
+                      <tr mat-header-row *matHeaderRowDef="covidColumns"></tr>
+                      <tr class="tr" mat-row *matRowDef="let row; columns: covidColumns;"></tr>
 
                       <tr class="mat-row" *matNoDataRow>
                           <td class="mat-cell td" colspan="6">No data found to display...</td>
-                          <!-- "{{input.value}}" -->
+                    
                         </tr>
                   </table>
 
