--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,7 @@
                               {{element.name|titlecase}} </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="complaint_subject">
+                      <ng-container matColumnDef="vaccine">
                           <th class="thead" mat-header-cell *matHeaderCellDef mat-sort-header>Vaccine </th>
                           <td mat-cell class="td" *matCellDef="let element">
                               
@@ -98,13 +98,13 @@
                           </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="complaint_id">
+                      <ng-container matColumnDef="available">
                           <th class="thead" mat-header-cell *matHeaderCellDef mat-sort-header>Available Capacity</th>
                           <td class="td" mat-cell *matCellDef="let element" >
                               {{element.sessions[0].available_capacity}} </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="complaint_type">
+                      <ng-container matColumnDef="slot">
                           <th class="thead" mat-header-cell *matHeaderCellDef mat-sort-header>Time</th>
                           <td class="td" mat-cell *matCellDef="let element" > 
                             <ng-container *ngFor="let slot of element.sessions[0].slots;">
